--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(44, 90, 160, 0.8), rgba(44, 90, 160, 0.9)no-repeat center center/cover;
+            background: linear-gradient(rgba(44, 90, 160, 0.8), rgba(44, 90, 160, 0.9)), url('https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
             color: white;
             padding: 180px 0 100px;
             text-align: left;
