--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <section class="hero">
         <div class="container">
           <div class="lisaphoto">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"width="100" height="100">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"width="100" height="100"></img>
             </div>
             <h1>About Lisa</h1>
             <p>*Lisa's bio*</p>
