--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             font-size: 20px;
             max-width: 700px;
             margin: 0 auto 30px;
+            text-align: left;
         }
 
         .hero-btns {
